[metadata]
name = gym_puyopuyo
version = 1.0.0.post+gitver
description = OpenAI Gym Environment for Puyo Puyo
long_description = file: README.md
author = Lumi Pakkanen
author_email = lumi.pakkanen@gmail.com
maintainer = Lumi Pakkanen
maintainer_email = lumi.pakkanen@gmail.com
url = https://github.com/frostburn/gym_puyopuyo
download_url = https://github.com/frostburn/gym_puyopuyo/releases
license = MIT
keywords = OpenAI, gym, AI
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
install_requires =
    gym==0.9.4

[options.packages.find]
exclude = tests, tests.*

[tool:pytest]

[flake8]
ignore = T001  # We ignore print statements in tests as console feedback is pretty useful
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,build

[pep8]
max-line-length = 120
exclude=.tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,build

[bdist_wheel]
universal = 1

[isort]
multi_line_output = 4
skip=.tox,dist,venv
not_skip = __init__.py
known_third_party = six
